<resources>
    <string name="app_name">SapiAdvertiser</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1972000676346491</string>
    <string name="fb_login_protocol_scheme">fb1972000676346491</string>
    <string name="titleHint">Title...</string>
    <string name="descriptionHint">Description...</string>
    <string name="submitAd">Submit Ad</string>
    <string name="location">Location</string>
    <string name="registerNow">Register Now</string>
    <string name="logIn">Log In</string>
    <string name="nameHint">Your Name...</string>
    <string name="emailHint">Email..</string>
    <string name="passwordHint">Password...</string>
    <string name="signUp">Sign Up</string>
    <string name="displayNameHint">Enter your display name...</string>
    <string name="finishSetup">Finish Setup</string>
    <string name="addImage">Add images</string>
    <string name="addAdvertisment">Add Advertisment</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log Out</string>

</resources>
