<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageSelect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff"
        android:src="@mipmap/add_btn"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="@string/addImage"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AdTitle"
        android:background="@drawable/input_outline"
        android:layout_below="@+id/imageSelect"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"

        android:ems="10"
        android:hint="@string/titleHint"
        android:inputType="textPersonName"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/AdDescription"
        android:background="@drawable/input_outline"
        android:layout_below="@+id/AdTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/descriptionHint" />


    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/submitAd"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/AdLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AdDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/location" />

</RelativeLayout>
